--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="button_first">第一个按钮</string>
     <string name="helloworld">Hello World!</string>
     <string name="handler_text_view">我的Handler教学</string>
+    <string name="stop">STOP</string>
+    <string name="start">START</string>
+    <string name="data_counts">条数</string>
+    <string name="confirm">确定</string>
 </resources>
